syntax = "proto3";

package gopherpizza.pizza.api.vi;

enum Crust {
    CRUST_NORMAL = 0;
    CRUST_THIN = 1;
    CRUST_GARLIC = 2;
    CRUST_STUFFED = 3;
    CRUST_GLUTEN_FREE = 4;
    CRUST_PRETZEL = 5;
}

enum Cheese {
    CHEESE_MOZZARELLA = 0;
    CHEESE_CHEDDAR = 1;
    CHEESE_NONE = 2;
    CHEESE_ALL = 3;
}

enum OrderStatus {
    ORDER_RECEIVED = 0;
    ORDER_PREPARING = 1;
    ORDER_BAKING = 2;
    ORDER_PENDING_PICKUP = 3;
    ORDER_OUT_FOR_DELIVERY = 4;
    ORDER_DELIVERED = 5;
}

message PizzaOrderInfo {
    string id = 1;
    Crust crust = 2;
    Cheese cheese = 3;
    repeated string toppings = 4;
}

message PizzaOrderStatus {
    OrderStatus status = 1;
    PizzaOrderInfo order = 2;
}
